Constrain live alerts globe to viewport container

--- a/public/live-earthquake-alerts.html
+++ b/public/live-earthquake-alerts.html
@@ -198,6 +198,7 @@
       .right {
         position: relative;
         min-height: 500px;
+        overflow: hidden;
       }
 
       .globe-wrap {
@@ -206,16 +207,19 @@
         align-items: center;
         justify-content: center;
         padding: 12px;
+        overflow: hidden;
       }
 
       .globe {
-        width: min(100%, 820px);
+        width: 100%;
         height: 100%;
         border-radius: 12px;
         background:
           radial-gradient(circle at 30% 25%, rgba(58, 145, 255, 0.3), rgba(2, 8, 23, 0.97) 52%),
           url('https://unpkg.com/three-globe/example/img/earth-night.jpg') center/cover no-repeat;
         box-shadow: 0 0 40px rgba(94, 140, 255, 0.25);
+        position: relative;
+        overflow: hidden;
       }
 
       .tools {
@@ -393,6 +397,15 @@
       let eventsData = [];
       const defaultCenter = { lat: 20, lng: 15 };
 
+      function resizeGlobeViewport() {
+        if (!globe) return;
+        const host = document.getElementById('globeViz');
+        if (!host) return;
+        const width = Math.max(320, Math.floor(host.clientWidth));
+        const height = Math.max(280, Math.floor(host.clientHeight));
+        globe.width(width).height(height);
+      }
+
       function tierClass(m) {
         if (m >= 6) return 'm-veryhigh';
         if (m >= 5) return 'm-high';
@@ -504,6 +517,8 @@
         if (globe) return globe;
         const el = document.getElementById('globeViz');
         globe = Globe()(el)
+          .width(Math.max(320, Math.floor(el.clientWidth)))
+          .height(Math.max(280, Math.floor(el.clientHeight)))
           .globeImageUrl('https://unpkg.com/three-globe/example/img/earth-night.jpg')
           .bumpImageUrl('https://unpkg.com/three-globe/example/img/earth-topology.png')
           .backgroundColor('rgba(0,0,0,0)')
@@ -518,6 +533,9 @@
         controls.autoRotateSpeed = 0.35;
         controls.enableDamping = true;
         controls.dampingFactor = 0.06;
+
+        window.addEventListener('resize', resizeGlobeViewport);
+        window.setTimeout(resizeGlobeViewport, 30);
         return globe;
       }
 
