--- a/public/live-earthquake-alerts.html
+++ b/public/live-earthquake-alerts.html
@@ -20,8 +20,15 @@
         color: #eef5ff;
       }
 
+      html,
+      body {
+        height: 100%;
+      }
+
       .page {
-        min-height: 100vh;
+        height: 100vh;
+        display: grid;
+        grid-template-rows: auto 1fr auto;
         background:
           radial-gradient(circle at 70% 42%, rgba(34, 95, 210, 0.28), rgba(4, 10, 24, 0.95) 45%),
           linear-gradient(160deg, #0a1327 0%, #040814 100%);
@@ -99,6 +106,7 @@
         grid-template-columns: 370px 1fr;
         gap: 14px;
         padding: 14px;
+        min-height: 0;
       }
 
       .card {
@@ -109,6 +117,9 @@
 
       .left {
         padding: 10px;
+        display: flex;
+        flex-direction: column;
+        min-height: 0;
       }
 
       .left h2 {
@@ -126,7 +137,8 @@
       }
 
       .events {
-        max-height: 420px;
+        flex: 1;
+        max-height: none;
         overflow-y: auto;
       }
 
@@ -197,12 +209,13 @@
 
       .right {
         position: relative;
-        min-height: 500px;
+        min-height: 0;
         overflow: hidden;
       }
 
       .globe-wrap {
-        height: 500px;
+        height: 100%;
+        min-height: 380px;
         display: flex;
         align-items: center;
         justify-content: center;
@@ -318,6 +331,12 @@
       }
 
       @media (max-width: 1200px) {
+        .page {
+          height: auto;
+          min-height: 100vh;
+          grid-template-rows: auto auto auto;
+        }
+
         .layout,
         .footer {
           grid-template-columns: 1fr;
