--- a/public/live-earthquake-alerts.html
+++ b/public/live-earthquake-alerts.html
@@ -417,9 +417,40 @@
       let eventsData = [];
       const defaultCenter = { lat: 20, lng: 15 };
       let isAutoRotateEnabled = true;
-      let blinkIntervalId = null;
-      let blinkingId = null;
-      let blinkVisible = true;
+
+      function selectedQuakeRings(selected) {
+        if (!selected) return [];
+
+        return [
+          {
+            id: `${selected.id}-ring-a`,
+            lat: selected.lat,
+            lng: selected.lng,
+            color: '#ff2a45',
+            maxRadius: 5.2,
+            speed: 1.5,
+            period: 1800,
+          },
+          {
+            id: `${selected.id}-ring-b`,
+            lat: selected.lat,
+            lng: selected.lng,
+            color: '#ff5f52',
+            maxRadius: 4.2,
+            speed: 1.25,
+            period: 1350,
+          },
+          {
+            id: `${selected.id}-ring-c`,
+            lat: selected.lat,
+            lng: selected.lng,
+            color: '#ff9a6a',
+            maxRadius: 3.4,
+            speed: 1.05,
+            period: 980,
+          },
+        ];
+      }
 
       function resizeGlobeViewport() {
         if (!globe) return;
@@ -565,61 +596,44 @@
 
       function refreshPointsAppearance() {
         if (!globe) return;
+
+        const selected = eventsData.find((item) => item.id === selectedId) || null;
+
         globe
           .pointAltitude((d) => {
             const base = Math.max(0.01, Math.min(0.22, 0.02 + d.mag * 0.02));
-            if (d.id === selectedId && blinkVisible) {
-              return Math.min(0.34, base + 0.08);
+            if (d.id === selectedId) {
+              return Math.min(0.38, base + 0.1);
             }
             return base;
           })
           .pointRadius((d) => {
             const base = Math.max(0.08, Math.min(0.28, 0.08 + d.mag * 0.03));
-            if (d.id === selectedId && blinkVisible) {
-              return Math.min(0.45, base + 0.12);
+            if (d.id === selectedId) {
+              return Math.min(0.46, base + 0.12);
             }
             return base;
           })
           .pointColor((d) => {
             if (d.id === selectedId) {
-              return blinkVisible ? '#ff3553' : '#ffd2da';
+              return '#ff1f3d';
             }
             return toPointColor(d.mag);
-          });
-      }
-
-      function stopBlinking() {
-        if (blinkIntervalId) {
-          clearInterval(blinkIntervalId);
-          blinkIntervalId = null;
-        }
-        blinkingId = null;
-        blinkVisible = true;
-      }
-
-      function startBlinking(id) {
-        stopBlinking();
-        blinkingId = id;
-        blinkVisible = true;
-        refreshPointsAppearance();
-
-        let ticks = 0;
-        blinkIntervalId = window.setInterval(() => {
-          if (selectedId !== id || blinkingId !== id) {
-            stopBlinking();
-            refreshPointsAppearance();
-            return;
-          }
-
-          blinkVisible = !blinkVisible;
-          refreshPointsAppearance();
-          ticks += 1;
-
-          if (ticks >= 10) {
-            stopBlinking();
-            refreshPointsAppearance();
-          }
-        }, 260);
+          })
+          .ringsData(selectedQuakeRings(selected))
+          .ringLat('lat')
+          .ringLng('lng')
+          .ringColor((d) => (t) => {
+            const alpha = Math.max(0, 0.95 - t);
+            const tone = d.color || '#ff3856';
+            const r = parseInt(tone.slice(1, 3), 16);
+            const g = parseInt(tone.slice(3, 5), 16);
+            const b = parseInt(tone.slice(5, 7), 16);
+            return `rgba(${r}, ${g}, ${b}, ${alpha.toFixed(3)})`;
+          })
+          .ringMaxRadius('maxRadius')
+          .ringPropagationSpeed('speed')
+          .ringRepeatPeriod('period');
       }
 
       function setAutoRotation(enabled) {
@@ -647,7 +661,6 @@
         for (const row of quakeRows) {
           row.classList.toggle('selected', row.dataset.id === id);
         }
-        startBlinking(id);
         refreshPointsAppearance();
         focusOn(id);
       }
@@ -793,7 +806,6 @@
           const glb = ensureGlobe();
           currentAltitude = 1.7;
           selectedId = null;
-          stopBlinking();
           glb.pointOfView({ ...defaultCenter, altitude: currentAltitude }, 600);
           for (const row of quakeRows) row.classList.remove('selected');
           refreshPointsAppearance();
